Adicione o manifesto web do site para suporte a PWA com ícones e configurações de cores.
Adiciona o nome da postagem ao título da página.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nao Compativel</title>
 
+    <!-- ===== TÍTULO ===== -->
+    <title>Gabriel Reis | Não Compatível - Blog de Cibersegurança & Dev</title>
+
+    <!-- ===== SEO ===== -->
+    <meta
+      name="description"
+      content="Portfólio e blog de Gabriel Reis. Artigos técnicos sobre Cibersegurança, Linux, Redes, Firewalls e Desenvolvimento de Software."
+    />
+    <meta
+      name="keywords"
+      content="Gabriel Reis, Cibersegurança, Segurança da Informação, Linux, Redes, Programação, Firewall, VPN, IFBA, Desenvolvedor"
+    />
+    <meta name="author" content="Gabriel Reis" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- ===== OPEN GRAPH ===== -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://naocompativel.com.br/" />
+    <meta property="og:title" content="Gabriel Reis | Não Compatível" />
+    <meta
+      property="og:description"
+      content="Explorando as camadas mais profundas da segurança da informação. Foco em Linux, Firewalls e desenvolvimento seguro."
+    />
+    <meta property="og:image" content="/favicon/og-image.png" />
+
+    <!-- ===== TWITTER CARDS ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://naocompativel.com.br/" />
+    <meta name="twitter:title" content="Gabriel Reis | Não Compatível" />
+    <meta
+      name="twitter:description"
+      content="Artigos técnicos sobre Cibersegurança, Linux e Redes."
+    />
+    <meta
+      name="twitter:image"
+      content="https://naocompativel.com.br/og-image.png"
+    />
+
+    <!-- ===== TEMA ===== -->
+    <meta name="theme-color" content="#020617" />
+
+    <!-- ===== FONTES ===== -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- ===== FAVICON / MANIFEST ===== -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
